--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -9,7 +9,11 @@ unlisted: true
 
 Salut à tous !
 
-🇫🇷 Cette semaine, la section en français présente un nouveau sponsor (Pylote), et les offres de la section Jobs sont fournies par une plateforme partenaire. C'est un test: dis-moi ce que tu penses de ces nouveautés en répondant à cet email 🙏, est-ce que cela te semble pertinent?
+Cette semaine, on a reçu des nouvelles de Next.js, qui reçoit pas mal de critiques dernièrement. Remix sort également son nouveau Dev Server avec Hot Data Revalidation.
+
+Coté React-Native, les devs s'amusent à faire tourner la dernière version sur Vision Pro.
+
+🇫🇷 La section en français présente un nouveau sponsor (Pylote), et les offres de la section Jobs sont fournies par une plateforme partenaire. C'est un test: dis-moi ce que tu penses de ces nouveautés en répondant à cet email 🙏, est-ce que cela te semble pertinent?
 
 Je te propose également de découvrir [React Jam](https://reactjam.com/?utm_source=thisweekinreact): un concours de création de jeux vidéos en React qui commence le 20 juillet. Je suis membre du jury.
 
