--- a/website/newsletter/150/index.mdx
+++ b/website/newsletter/150/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /150
-title: "This Week In React #150: ..."
+title: "This Week In React #150: Next.js, Skew Protection, Portals, Remix Dev Server, Shadcn UI, AI, React-Aria, SWR, visionOS, tvOS, MiniSim, MMKV..."
 authors: [slorber]
 date: 06-27-2023
 image: /img/TWIR_POST.png
@@ -72,7 +72,6 @@ Check out our **AI Generated Search tool** that’s changing the way people lo
 
 Click the link and [get $1 off your next domain name registration](http://porkbun.com/?coupon=TWIREACT&utm_source=TWIREACT&utm_medium=Newsletter&utm_campaign=twirjune2023) at Porkbun.com!
 
-
 ---
 
 ## 📱 React-Native {#react-native}
@@ -94,7 +93,6 @@ Do you want to work on the world's most used apps? Would you like to co-create t
 🧑‍💼 [**G2i - 100% Remote React Native Jobs**](https://twitter.com/gabe_g2i/status/1563204813881425926?s=20&t=ArRLC77BpRwXXCdx8fnUqw)
 
 We have several roles open for developers focused on React Native! Pay is ~160k plus 10% bonus. You must have production experience with RN and be based in the US. DM [@gabe_g2i](https://twitter.com/gabe_g2i) to learn more and don't forget to mention This Week in React.
-
 
 💡 [How to publish an offer?](https://thisweekinreact.com/sponsor)
 
