--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -83,6 +83,7 @@ Cette collection de composants Tailwind + Radix fait de plus en plus d'adeptes. 
 
 - 🐦 [Fred K Schott - "React.js canary is _not_ stable and probably shouldn't be used in production."](https://twitter.com/FredKSchott/status/1673722399278403584): un débat qui anime particulièrement la communauté cette semaine. J'ai aussi partagé [mon opinion](https://twitter.com/sebastienlorber/status/1673802036666589185): c'est ok d'utiliser une release canary React dans une framework.
 - 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
+- 👀 [React Jam - Build and play games together!](https://reactjam.com/?utm_source=thisweekinreact)
 - 👀 [Remotion 4.0 launches next week](https://twitter.com/JNYBGR/status/1673641398539546625)
 - 💡 [Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus): astuce pour reproduire une feature appréciées de React-Query/SWR.
 - 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react): super article interactif pour ceux qui galèrent avec le z-index. Explique bien le concept de stacking context, et en quoi créer un portal React peut vous simplifier la vie.
