--- a/website/newsletter/150/index.mdx
+++ b/website/newsletter/150/index.mdx
@@ -12,7 +12,7 @@ This week we've had some news about Next.js, which has been getting a lot of cri
 
 On the React-Native side, the devs are having fun running the latest version on Vision Pro.
 
-I'd also like you to check out [React Jam](https://reactjam.com/?utm_source=thisweekinreact): a competition to create video games in React that starts on 20 July. I'm on the jury.
+Check out [React Jam](https://reactjam.com/?utm_source=thisweekinreact): a contest to create video games in React that starts on 20 July. I'm on the jury.
 
 <!-- truncate -->
 
@@ -81,6 +81,7 @@ This collection of Tailwind + Radix components is gaining momentum. The author h
 
 - 🐦 [Fred K Schott - "React.js canary is _not_ stable and probably shouldn't be used in production."](https://twitter.com/FredKSchott/status/1673722399278403584): a debate that is particularly animating the community this week. I also shared [my opinion](https://twitter.com/sebastienlorber/status/1673802036666589185) and think it's OK to use a canary React release in a framework.
 - 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
+- 👀 [React Jam - Build and play games together!](https://reactjam.com/?utm_source=thisweekinreact)
 - 👀 [Remotion 4.0 launches next week](https://twitter.com/JNYBGR/status/1673641398539546625)
 - 💡 [Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus): tip for reproducing a popular React-Query/SWR feature.
 - 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react): great interactive article for those struggling with z-index. Explains well the concept of stacking context, and how creating a React portal can simplify your life.
