--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
@@ -9,7 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Vacances
+
+Remotion 4
 
 <!-- truncate -->
 
@@ -31,7 +33,34 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Remotion 4.0](https://www.remotion.dev/blog/4-0)
+
+- zod for video parameters, visual editing
+- render button UI
+- adopting Rust: OffthreadVideo x2 faster
+- breaking changes, fixing api design mistakes
+
+keynote: https://www.youtube.com/watch?v=S3C9wlPNhkQ
+
+---
+
+- [Next.js 13.4.8](https://twitter.com/nextjs/status/1675929873720680459) + https://twitter.com/tomlienard/status/1675930496763568151
+- [Live Regions in React](https://dev.to/abbeyperini/live-regions-in-react-4dmd)
+- [Creating a seamless multi-language user interface in React](https://www.honeybadger.io/blog/creating-multi-language-user-interface-with-react/)
+- [Declaring JSX types in TypeScript 5.1](https://blog.logrocket.com/declaring-jsx-types-typescript-5-1/)
+- [Astro Starlight](https://starlight.astro.build/)
+- [Internationalize NextJs URLs with next-translate](https://dev.to/martinratinaud/internationalize-nextjs-urls-with-next-translate-49d8)
+- [Form validation with Conform, Zod, and Remix](https://www.jacobparis.com/content/remix-conform)
+- [Breaking Up with SVG-in-JS in 2023](https://kurtextrem.de/posts/svg-in-js)
+- [This Month in React – June 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--June-2023-e26dgii)
+- [React.dev PR - Adds a TypeScript overview page](https://github.com/reactjs/react.dev/pull/6120)
+- [React Hook for Avoiding Flash of Empty UI While Data Transitions](https://www.jameskerr.blog/posts/use-data-transition/)
+- [Next.js - Improving next/image support](https://twitter.com/leeerob/status/1674250190432116736)
+- [Storybook - In-app tour for new users](https://storybook.js.org/blog/in-app-tour-for-new-users/) + https://twitter.com/storybookjs/status/1674449847347290112
+- React discourse burnout: https://twitter.com/dan_abramov/status/1673394979106856960 https://twitter.com/leeerob/status/1673422710326677505
+- [next-international](https://twitter.com/tomlienard/status/1675512683007705090) new version RSC
+- [TinyBase v4.0](https://twitter.com/tinybasejs/status/1674826869169070080)
+- [Bun-Remix](https://github.com/jacob-ebey/bun-remix)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -55,21 +84,34 @@ import Support from "../_support.mdx";
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[Expo SDK 49 beta is now available](https://blog.expo.dev/expo-sdk-49-beta-is-now-available-6373e78f8624)
+
+Expo Router v2 beta: https://twitter.com/Baconbrix/status/1674258661143879680
+
+https://twitter.com/kudochien/status/1674247304721858561
+
+---
+
+- [iOS App Clips: a faster, smoother user experience](https://www.bam.tech/en/article/app-clips-ios-experience-utilisateur)
+- https://twitter.com/JI/status/1674601397093011458 ?
+- [Guest Post: Vexo Analytics now integrates with Expo Router](https://blog.expo.dev/guest-post-vexo-analytics-now-integrates-with-expo-router-33f2da346bf5)
+- [Expo weekly docs update](https://twitter.com/amanhimself/status/1675794149424115714)
+- upgrade SDK ? https://twitter.com/Baconbrix/status/1674633046971289600
+- [Reinventing Camera Processing - TensorFlow Lite GPU straight from JavaScript](https://mrousavy.com/blog/Reinventing-Camera-Processing) + https://twitter.com/mrousavy/status/1674863515788615680 + https://twitter.com/mrousavy/status/1674791891823648770 + https://twitter.com/mrousavy/status/1675883155822202880
+- [Hacking Xcode with Colo Loco!](https://www.youtube.com/watch?v=ucEBfIZOap8)
+- [What's New in React Native 0.72?](https://www.youtube.com/watch?v=XNeoSaacyX4)
 
 ---
 
 ## 🧑‍💻 Jobs {#jobs}
 
-[![Free-Work](/emails/issues/150/free-work.jpg)](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres)
+🧑‍💼 [**Shotgun - Senior Full Stack Engineer - 60-75k€ + BSPCE**](https://shotgun.teamtailor.com/jobs/1981578-senior-full-stack-engineer)
 
-Cette semaine, notre partenaire [**Free-Work**](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres) propose les offres suivantes:
+Shotgun est la billetterie des évènements electro. Nous recherchons des devs expérimentés pour travailler sur une stack moderne: React, React-Native, Typescript, GraphQL, NextJS, PgSQL, Vercel...
 
-- [Lead Symfony / React - CDI Paris - 70k-80k€](https://www.free-work.com/fr/tech-it/developpeur-php/job-mission/lead-symfony-react-le-local-avant-tout-paris?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre3-EasyPartner)
-- [Développeur Nodejs Mongodb Reactjs - CDI Paris - 60k-65k€](https://www.free-work.com/fr/tech-it/api-developpeur/job-mission/developpeur-nodejs-mongodb-reactjs-h-f-17?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre4-HRTEAM)
-- [Développeur JS Node React PIXI.JS - Freelance Paris - 400-510€/j](https://www.free-work.com/fr/tech-it/developpeur-web/job-mission/developpeur-js-node-react-pixi-js-secteur-du-jeu-de-casinos?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre1-OLYMPP)
-- [Développeur Nodejs Mongodb Reactjs - Freelance Paris - 500-550 €/j](https://www.free-work.com/fr/tech-it/api-developpeur/job-mission/developpeur-nodejs-mongodb-reactjs-h-f-18?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre2-HRTeam)
+🧑‍💼 [**Premier Octet - Développeurs(euses) React - Paris**](https://www.premieroctet.com/jobs)
 
+Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendrez en développement sur des projets variés et motivants, à la fois serveur et front (React, Nest, Next), et éventuellement mobile (React Native).
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
@@ -78,6 +120,10 @@ Cette semaine, notre partenaire [**Free-Work**](https://www.free-work.com/fr/tec
 ---
 
 ## 🇫🇷 En français {#fr}
+
+- [Créer des modales avec React](https://www.qphi.dev/posts/comment-creer-modale-react)
+
+💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 [![Premier Octet](/emails/issues/151/premieroctet.png)](https://www.premieroctet.com/?utm_source=react_hebdo)
 
@@ -88,18 +134,27 @@ Nous intervenons en développement, conseil, audit ou formation, sur des thémat
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
-
----
+- [TypeScript 5.2 Beta](https://devblogs.microsoft.com/typescript/announcing-typescript-5-2-beta/)
+- [Qwik 1.2](https://www.builder.io/blog/qwik-1-2-performance-autopilot)
+- [Ember 5.0](https://blog.emberjs.com/ember-5-0-released/)
+- [CSS: The Good Parts](https://www.builder.io/blog/css-the-good-parts)
+- [CommonJS is not going away](https://bun.sh/blog/commonjs-is-not-going-away)
+- [CommonJS is hurting JavaScript](https://deno.com/blog/commonjs-is-hurting-javascript)
+- [W3C First Public Working Draft: CSS Anchor Positioning](https://twitter.com/sebastienlorber/status/1675900466553659396)
+- [New to the web platform in June](https://web.dev/web-platform-06-2023/)
+- [Understanding SVG Paths](https://www.nan.fyi/svg-paths)
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/BHolmesDev/status/1675675860060209154
+
+https://twitter.com/trashh_dev/status/1675169417070800897
+
+https://twitter.com/localhost_5173/status/1675142562473185281
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
