--- a/website/newsletter/151/index.mdx
+++ b/website/newsletter/151/index.mdx
@@ -25,7 +25,10 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Frontendmasters](/emails/issues/151/frontendmasters.png)](https://frontendmasters.com/)
+
+**[Frontendmasters](https://frontendmasters.com/)**
+
 
 ---
 
