--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
@@ -27,7 +27,9 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Frontendmasters](/emails/issues/151/frontendmasters.png)](https://frontendmasters.com/)
+
+**[Frontendmasters](https://frontendmasters.com/)**
 
 ---
 
