--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
@@ -29,11 +29,9 @@ import Support from "../_support.mdx";
 
 [![Frontendmasters](/emails/issues/151/frontendmasters.png)](https://frontendmasters.com/courses/enterprise-ui-dev/?utm_source=email&utm_medium=thisweekinreact&utm_content=uidev)
 
-**[Frontendmasters](https://frontendmasters.com/courses/enterprise-ui-dev/?utm_source=email&utm_medium=thisweekinreact&utm_content=uidev)**
+**[Enterprise UI Development (With React): Testing & Code Quality](https://frontendmasters.com/courses/enterprise-ui-dev/?utm_source=email&utm_medium=thisweekinreact&utm_content=uidev)**
 
-Enterprise UI Development (With React): Testing & Code Quality – Managing or migrating large apps and codebases? This video course covers what you need to know to scale efficiently whilst maintaining code quality. Covers unit testing, CI pipelines, mocking, code coverage, and more.
-
-Here's what it looked like running in JS weekly recently: [https://javascriptweekly.com/issues/643](https://javascriptweekly.com/issues/643)
+Managing or migrating large apps and codebases? This video course covers what you need to know to scale efficiently whilst maintaining code quality. Covers unit testing, CI pipelines, mocking, code coverage, and more.
 
 ---
 
