--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/151/index.mdx
@@ -106,7 +106,7 @@ Déconseille le "SVG-in-JS": il faut éviter de render les SVGs via des composan
 
 **[Expo SDK 49 beta is now available](https://blog.expo.dev/expo-sdk-49-beta-is-now-available-6373e78f8624)**
 
-Le nouveau SDK 49 vient de sortir en beta, pour environ une semaine. Une release avec plein d'améliorations notables, difficile de toutes les lister. Mes highlights:
+Le nouveau SDK 49 vient de sortir, en beta pour environ une semaine. Une release avec plein d'améliorations notables, difficile de toutes les lister. Mes highlights:
 
 - React-Native v0.72
 - Expo Router v2 RC
